fix : 서비스가 엔티티를 노출하지 않도록 수정
DTO로 완전히 변환 후 list에 넣도록 수정하였습니다.

#59